WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136834
Crash when logging in to optionshouse.com
https://bugs.webkit.org/show_bug.cgi?id=136834
Summary
Crash when logging in to optionshouse.com
Alexey Proskuryakov
Reported
2014-09-15 13:56:38 PDT
1 com.apple.CoreFoundation 0x7fff86bb16df CFReadStreamCopyError + 0xf
> 2 com.apple.WebCore 0x7fff8aadcd9d WebCore::SocketStreamHandle::readStreamCallback(unsigned long) + 0x3d
3 com.apple.CoreFoundation 0x7fff86bb1554 _signalEventSync + 0xb4 4 com.apple.CoreFoundation 0x7fff86bb1484 _cfstream_solo_signalEventSync + 0xf4 5 com.apple.CoreFoundation 0x7fff86bb133f _CFStreamSignalEvent + 0x1ef <
rdar://problem/18340481
>
Attachments
proposed fix
(2.00 KB, patch)
2014-09-15 13:59 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-09-15 13:57:24 PDT
This is the sequence of events: SocketStreamHandle 0x113f7fa90 new client 0x113d271c0 SocketStreamHandle g readStreamCallback, stream 0x7fbf314062e0, type 1 (OpenCompleted) m_readStream 0x7fbf314062e0, m_state 0 SocketStreamHandle 0x113f7fa90 writeStreamCallback, stream 0x7fbf3141a3c0, type 1 (OpenCompleted) m_writeStream 0x7fbf3141a3c0, m_state 0 SocketStreamHandle 0x113f7fa90 readStreamCallback, stream 0x7fbf314062e0, type 2 (HasBytesAvailable) m_readStream 0x7fbf314062e0, m_state 0 SocketStreamHandle 0x113f7fa90 platformClose SocketStreamHandle 0x113f7fa90 readStreamCallback, stream 0x7fbf314062e0, type 8 (ErrorOccurred) m_readStream 0x0, m_state 3
Alexey Proskuryakov
Comment 2
2014-09-15 13:59:52 PDT
Created
attachment 238141
[details]
proposed fix
WebKit Commit Bot
Comment 3
2014-09-15 15:53:00 PDT
Comment on
attachment 238141
[details]
proposed fix Clearing flags on attachment: 238141 Committed
r173635
: <
http://trac.webkit.org/changeset/173635
>
WebKit Commit Bot
Comment 4
2014-09-15 15:53:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug