Crash when logging in to optionshouse.com https://bugs.webkit.org/show_bug.cgi?id=136834

Reviewed by Anders Carlsson.

No test, because I couldn't make one. I don't have a way to reproduce first-hand.

* platform/network/cf/SocketStreamHandleCFNet.cpp:
(WebCore::SocketStreamHandle::readStreamCallback):
(WebCore::SocketStreamHandle::writeStreamCallback):


Canonical link: https://commits.webkit.org/154661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173635 268f45cc-cd09-0410-ab3c-d52691b4dbfc